<resources>
    <string name="app_name">SpaceApp</string>
    <string name="title">Curiosity</string>
    <string name="title_description">Front Hazard Avoidance Camera</string>
    <string name="show_image">SHOW IMAGE</string>
    <string name="tab_main">Main</string>
    <string name="tab_map">Map</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="OK">OK</string>
    <string name="default_notification_channel_id">AIzaSyCrOVXZ2LR759d95E2xwPSChVAqcf93VdY</string>
    <string name="API_KEY">AIzaSyDu0SYNLFjf4AkgqAuycKdAuPnOEJf8xB0</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="marker_name">Marker name</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="width">Width:</string>
    <string name="land">99999999</string>
    <string name="msg_token_fmt">It is time to explore something news!</string>
    <string name="msg_subscribed">Message subscribed!</string>
    <string name="msg_subscribe_failed">Subscribe failed!</string>
    <string name="default_notification_channel_name">Cloud messaging notifications</string>

</resources>